# kamachess

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  test_env.sh
docs/: CI_CD.md  DEPLOYMENT.md  DEVELOPMENT.md  MONITORING.md  NGINX.md  README.md
migrations/: 001_init.sql  002_add_draw_proposed_by.sql
migrations/postgres/: 001_init.sql  002_add_draw_proposed_by.sql  003_add_game_messages.sql  004_add_draw_proposal_message_id.sql
migrations/sqlite/: 001_init.sql  002_add_draw_proposed_by.sql  003_add_game_messages.sql  004_add_draw_proposal_message_id.sql
monitoring/grafana/dashboards/: bot-dashboard.json
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: jenkins-build.sh  jenkins-deploy.sh
src/: lib.rs  main.rs  models.rs  utils.rs
src/api/: mod.rs  telegram.rs
src/db/: database.rs
src/game/: cache.rs  chess.rs  glyphs.rs  mod.rs  render.rs
src/handlers/: game_handler.rs  help_handler.rs  history_handler.rs  mod.rs  update_router.rs
src/parsing/: mod.rs
src/server/: mod.rs
tests/: chess_tests.rs  database_tests.rs  fen_independence_tests.rs  image_cache_tests.rs  move_sequences.rs  telegram_api_tests.rs  webhook_server_tests.rs
